--- a/cmake/modules/CMakeLists.txt
+++ b/cmake/modules/CMakeLists.txt
@@ -1,3 +1,3 @@
-set(modules "DuneChannelingMacros.cmake")
+set(modules "DuneImmoMacros.cmake")
 
 install(FILES ${modules} DESTINATION ${DUNE_INSTALL_MODULEDIR})
