--- a/dune/Makefile.in
+++ b/dune/Makefile.in
@@ -300,10 +300,6 @@ DUNEMPICPPFLAGS = @DUNEMPICPPFLAGS@
 DUNEMPILDFLAGS = @DUNEMPILDFLAGS@
 DUNEMPILIBS = @DUNEMPILIBS@
 DUNEWEBDIR = @DUNEWEBDIR@
-DUNE_CHANNELING_VERSION = @DUNE_CHANNELING_VERSION@
-DUNE_CHANNELING_VERSION_MAJOR = @DUNE_CHANNELING_VERSION_MAJOR@
-DUNE_CHANNELING_VERSION_MINOR = @DUNE_CHANNELING_VERSION_MINOR@
-DUNE_CHANNELING_VERSION_REVISION = @DUNE_CHANNELING_VERSION_REVISION@
 DUNE_COMMON_CPPFLAGS = @DUNE_COMMON_CPPFLAGS@
 DUNE_COMMON_LDFLAGS = @DUNE_COMMON_LDFLAGS@
 DUNE_COMMON_LIBDIR = @DUNE_COMMON_LIBDIR@
@@ -332,6 +328,10 @@ DUNE_GRID_VERSION = @DUNE_GRID_VERSION@
 DUNE_GRID_VERSION_MAJOR = @DUNE_GRID_VERSION_MAJOR@
 DUNE_GRID_VERSION_MINOR = @DUNE_GRID_VERSION_MINOR@
 DUNE_GRID_VERSION_REVISION = @DUNE_GRID_VERSION_REVISION@
+DUNE_IMMO_VERSION = @DUNE_IMMO_VERSION@
+DUNE_IMMO_VERSION_MAJOR = @DUNE_IMMO_VERSION_MAJOR@
+DUNE_IMMO_VERSION_MINOR = @DUNE_IMMO_VERSION_MINOR@
+DUNE_IMMO_VERSION_REVISION = @DUNE_IMMO_VERSION_REVISION@
 DUNE_LDFLAGS = @DUNE_LDFLAGS@
 DUNE_LIBS = @DUNE_LIBS@
 DUNE_MAINTAINER_NAME = @DUNE_MAINTAINER_NAME@
@@ -383,6 +383,7 @@ LIBTOOL = @LIBTOOL@
 LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
+LT_SYS_LIBRARY_PATH = @LT_SYS_LIBRARY_PATH@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
@@ -489,7 +490,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = channeling
+SUBDIRS = immo
 EXTRA_DIST = CMakeLists.txt
 sourcescheck_IGNORE = aclocal.m4 dependencies.m4
 sourcescheck_LIST = $(SOURCES) $(DIST_SOURCES) $(HEADERS) $(DIST_HEADERS) \
